crates/strider/tests/snapshots/v3__arm_be__calling_convention__uses_return.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x107f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v16" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "17" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "v16" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "1" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v16" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "20" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
